# snappi

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
docs/: auto-effects-spec-v2.md  auto-effects-spec-v3.md  auto-effects-spec-v4.md  auto-effects-spec.md  effects-engine-design.md  screen-recorder-architecture-v2.md
docs/old/proposals/: ken_proposal.md  yuki_proposal.md
docs/proposals/: rio_proposal.md
icon/: カーソル.json
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ffmpeg/: README.txt
src-tauri/src/: commands.rs  lib.rs  main.rs  shortcuts.rs  tray.rs
src-tauri/src/config/: defaults.rs  mod.rs
src-tauri/src/engine/: activity_cluster.rs  analyzer.rs  click_cluster.rs  compositor.rs  cursor_smoother.rs  frame_differ.rs  mod.rs  preprocessor.rs  scene_splitter.rs  spring.rs  ui_context.rs  zoom_planner.rs
src-tauri/src/engine/effects/: background.rs  click_ring.rs  cursor.rs  key_badge.rs  mod.rs  viewport.rs
src-tauri/src/export/: encoder.rs  mod.rs  presets.rs
src-tauri/src/recording/: audio.rs  capture.rs  events.rs  focus.rs  mod.rs  session.rs  ui_tracker.rs
src/components/: ContextMenu.tsx  ExportButtons.tsx  RecordingBar.tsx  SegmentEditor.tsx  ThumbnailCard.tsx  Timeline.tsx  VideoPlayer.tsx  ZoomTrack.tsx
src/lib/: commands.ts  springMath.ts  types.ts  zoomSegments.ts
src/pages/: Preview.tsx  RecordingList.tsx  Settings.tsx
